@@ -65,6 +65,7 @@ public class FlashcardServiceImpl implements FlashcardService {
     private final AIFlashcardService aiFlashcardService;
     private final FlashcardPermissionService flashcardPermissionService;
     private final com.cabybara.prolearningplatform.service.knowledge.TopicAssignmentAsyncService topicAssignmentAsyncService;
+    private final com.cabybara.prolearningplatform.repository.UserFavoriteResourceRepository userFavoriteResourceRepository;
 
     @Override
     public Page<FlashcardResponseDto> getAllFlashcard(Long setId, String q, Privacy privacy, CreationMethod createMethod, Pageable pageable) {
@@ -88,7 +89,14 @@ public class FlashcardServiceImpl implements FlashcardService {
             }
         }
 
-        return pagedFlashcard.map(flashcardMapper::toFlashcardResponseDto);
+        return pagedFlashcard.map(flashcard -> {
+            FlashcardResponseDto dto = flashcardMapper.toFlashcardResponseDto(flashcard);
+            dto.setIsFavorited(userFavoriteResourceRepository.existsByUserIdAndResourceIdAndResourceType(userId, flashcard.getId(), com.cabybara.prolearningplatform.enums.ContentType.FLASHCARD));
+            dto.setOwnerId(flashcard.getUser().getId());
+            dto.setOwnerName(flashcard.getUser().getFirstName() != null ? flashcard.getUser().getFirstName() + " " + flashcard.getUser().getLastName() : flashcard.getUser().getLastName());
+            dto.setOwnerAvatar(flashcard.getUser().getAvatarUrl());
+            return dto;
+        });
     }
 
     @Override
@@ -100,9 +108,14 @@ public class FlashcardServiceImpl implements FlashcardService {
                 .orElseThrow(() -> new ResourceNotFoundException("Flashcard with id: " + flashcardId + " not found!"));
 
         NoteRole userRole = flashcardPermissionService.getUserRoleInFlashcard(flashcardId, userId);
+        boolean isFavorited = userFavoriteResourceRepository.existsByUserIdAndResourceIdAndResourceType(userId, flashcardId, com.cabybara.prolearningplatform.enums.ContentType.FLASHCARD);
 
         DetailFlashcardResponseDto dto = flashcardMapper.toDetailFlashcardResponseDto(flashcard);
         dto.setUserRole(userRole);
+        dto.setIsFavorited(isFavorited);
+        dto.setOwnerId(flashcard.getUser().getId());
+        dto.setOwnerName(flashcard.getUser().getFirstName() != null ? flashcard.getUser().getFirstName() + " " + flashcard.getUser().getLastName() : flashcard.getUser().getLastName());
+        dto.setOwnerAvatar(flashcard.getUser().getAvatarUrl());
         
         return dto;
     }
@@ -137,7 +150,7 @@ public class FlashcardServiceImpl implements FlashcardService {
         flashcardPermissionService.addOwner(savedFlashcard.getId(), userId);
 
         if (flashcard.getCreate_method() == CreationMethod.AI) {
-            topicAssignmentAsyncService.assignTopicsToFlashcardAsync(savedFlashcard.getId());
+            topicAssignmentAsyncService.assignTopicsToFlashcardAsync(savedFlashcard.getId(), userId);
         }
 
         setRepository.updateLastModifiedDate(setId, OffsetDateTime.now());
@@ -165,7 +178,7 @@ public class FlashcardServiceImpl implements FlashcardService {
                         .backCard(source.getBackCard())
                         .topic(source.getTopic())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         flashcard.setCards(copiedCards);
 
@@ -181,7 +194,7 @@ public class FlashcardServiceImpl implements FlashcardService {
                 .map(CardItemCreateRequestDto::getImageAssetId)
                 .filter(Objects::nonNull)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
         return assetService.findAndActivateAssets(assetIdsToActivate, userId);
     }
@@ -202,7 +215,7 @@ public class FlashcardServiceImpl implements FlashcardService {
                     cardItem.setFlashcard(flashcard);
                     return cardItem;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -254,7 +267,7 @@ public class FlashcardServiceImpl implements FlashcardService {
         // Get note IDs from the request
         List<Long> noteIds = request.getNotes().stream()
                 .map(NoteRequestDto::getNoteId)
-                .collect(Collectors.toList());
+                .toList();
         
         List<Note> notes = noteRepository.findAllById(noteIds);
 
@@ -347,7 +360,7 @@ public class FlashcardServiceImpl implements FlashcardService {
                     fc.getSetId(),
                     fc.getInvitedAt()
                 ))
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -377,6 +390,10 @@ public class FlashcardServiceImpl implements FlashcardService {
                             .updatedAt(dto.getUpdatedAt())
                             .userRole(role)
                             .setId(flashcard.getSet() != null ? flashcard.getSet().getId() : null)
+                            .isFavorited(userFavoriteResourceRepository.existsByUserIdAndResourceIdAndResourceType(userId, flashcard.getId(), com.cabybara.prolearningplatform.enums.ContentType.FLASHCARD))
+                            .ownerId(flashcard.getUser().getId())
+                            .ownerName(flashcard.getUser().getFirstName() != null ? flashcard.getUser().getFirstName() + " " + flashcard.getUser().getLastName() : flashcard.getUser().getLastName())
+                            .ownerAvatar(flashcard.getUser().getAvatarUrl())
                             .build();
                 });
     }
